--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
 
 dependencies:
   bloc: ^8.1.2
+  bloc_test: ^9.1.3
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   http: ^1.1.0
+  mocktail: ^0.3.0
 
 dev_dependencies:
   flutter_test:
