--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   http: ^1.1.0
   mocktail: ^0.3.0
+  shared_preferences: ^2.2.1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
