--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: zip_search
 description: A new Flutter project.
 publish_to: 'none'
-version: 1.0.0
+version: 1.0.0+4
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
