--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
 
 dependencies:
   bloc: ^8.1.2
+  cupertino_icons: ^1.0.8
   equatable: ^2.0.5
+  firebase_analytics: ^11.2.0
+  firebase_core: ^3.2.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
