--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:label="Busca CEP"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
