--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  get_it: ^8.0.0
   http: ^1.1.0
   share_plus: ^7.2.2
   shared_preferences: ^2.2.1
