--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,36 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    flavorDimensions "app"
+
+    productFlavors {
+        prod {
+            applicationId = "com.gflabs.zip_search"
+            dimension "app"
+            resValue "string", "app_name", "prod flavor"
+            versionNameSuffix ".prod"
+        }
+
+        dev {
+            applicationId = "com.gflabs.zip_search.dev"
+            dimension "app"
+            resValue "string", "app_name", "dev flavor"
+            versionNameSuffix ".dev"
+        }
+    }
+}
+
+dependencies {
+  // Import the Firebase BoM
+  implementation platform('com.google.firebase:firebase-bom:33.3.0')
+
+  // TODO: Add the dependencies for Firebase products you want to use
+  // When using the BoM, don't specify versions in Firebase dependencies
+  implementation 'com.google.firebase:firebase-analytics'
+
+  // Add the dependencies for any other desired Firebase products
+  // https://firebase.google.com/docs/android/setup#available-libraries
 }
 
 flutter {
