--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   bloc_test: ^9.1.3
   mocktail: ^0.3.0
+  firebase_core_platform_interface: ^5.3.0
+  firebase_analytics_platform_interface: ^4.2.5
 
 flutter:
   uses-material-design: true
