fix: updated file

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,8 @@
 workflows:
   develop:
     name: Develop Branch Workflow
+    triggers:
+      - pull_request
     environment:
       vars:
         FLUTTER_VERSION: stable
@@ -27,6 +29,8 @@ workflows:
 
   master:
     name: Master Branch Workflow
+    triggers:
+      - pull_request
     environment:
       vars:
         FLUTTER_VERSION: stable
