--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^8.0.0
   http: ^1.1.0
+  logger: ^2.5.0
   share_plus: ^7.2.2
   shared_preferences: ^2.2.1
   smooth_page_indicator: ^1.1.0
