--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get_it: ^8.0.0
   http: ^1.1.0
   logger: ^2.5.0
+  rive: ^0.13.20
   share_plus: ^7.2.2
   shared_preferences: ^2.2.1
   smooth_page_indicator: ^1.1.0
@@ -33,3 +34,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/animated_icons.riv
+    - assets/animated_icons_white.riv
